# definitions

./: .gitignore  .gitmodules  Makefile  README.md  cli.py  coins_details.json  conftest.py  definitions-latest.json  do_coins_details.sh  do_eth_definitions.sh  do_sign.sh  do_update.sh  ethereum_definitions.py  pyproject.toml  suite-support.json  supported_coins_list.txt
coins_details/: coin_info.py  coingecko_ids.json  coins_details.override.json  coins_details.py  definitions-blacklist.json  wallets.json
eth_definitions/: builtin_defs.py  check_definitions.py  common.py  crypto.py  definitions_dev_sign.py  download.py  erc7730.py  erc7730_validate.py  generate.py  onchain.py  sign.py  test_check_definitions.py  test_data.py  test_download.py  test_erc7730.py  test_erc7730_validate.py
