[project]
name = "definitions"
version = "0.1.0"
description = ""
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.3,<9",
    "requests>=2.28.2,<3",
    "urllib3>=1.26.14,<3",
    "trezor>=0.20.0,<1",
    "cryptography>=42.0.0,<43",
    "rich>=13.8.0,<14",
    "readchar>=4.2.0,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[build-system]
requires = ["flit_core>=3.11,<5"]
build-backend = "flit_core.buildapi"

[tool.uv]
package = false
exclude-newer = "30 days"
