[project]
name = "definitions"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.3,<9",
    "requests>=2.28.2,<3",
    "urllib3>=2.7.0,<3",
    "trezor>=0.20.0,<0.21.0",
    "cryptography>=46.0.5,<47",
    "rich>=13.8.0,<14",
    "readchar>=4.2.0,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.uv]
package = false
exclude-newer = "30 days"
exclude-newer-package = { urllib3 = "2026-05-08" }
