[project]
name = "definitions"
version = "0.1.0"
description = ""
# Upper bound inherited from `erc7730` (1.x declares Requires-Python
# ">=3.12,<3.13"). Drop the `<3.13` only once erc7730 supports 3.13 — until
# then a wider bound just turns a clear message into a dependency-resolution
# failure on 3.13.
requires-python = ">=3.12,<3.13"
dependencies = [
    "click>=8.1.3,<9",
    "requests>=2.28.2,<3",
    "urllib3>=2.7.0,<3",
    "trezor>=0.20.0,<0.21.0",
    "cryptography>=46.0.5,<47",
    "rich>=13.8.0,<14",
    "readchar>=4.2.0,<5",
    # Pins Python to <3.13; see requires-python note above.
    "erc7730>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.uv]
package = false
exclude-newer = "30 days"
exclude-newer-package = { urllib3 = "2026-05-08" }
